[package]
name = "test_tool"
version = "0.1.0"
authors = ["fbenpao <1250222077@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signer = { path = "../signer" }
hex = { git = "https://github.com/Zondax/rust-hex", rev="6e35fb48999278c8c6c75b099baa4ea2a9d1d12b" }
bitcoin-wallet = "1.1.0"

serde_json = "=1.0.59"


